[package]
name = "tabularlib"
version = "0.1.0"
authors = ["hirundula <hirundula@gmail.com>"]
edition = "2021"
license = "GPL-3"
repository = "https://github.com/hirundula/tabularlibrs"
keywords = ["mathematics", "data-structures", "algebra", "matrix", "matrices"]
categories = ["mathematics"]
include = ["/src", "/src/lib.rs", "/src/interp.rs", "/src/memo.rs", "/src/utils.rs", "/LICENSE.txt"]

[dependencies]
