[package]
name = "tabularlib"
description = "Small library for abstract matrices stored in single linear vectors created as practice project"
version = "0.1.0"
rust-version = "1.80.0"
authors = ["hirundula <hirundula@gmail.com>"]
edition = "2021"
license = "GPL-3"
license-file = "GPL-3.0.txt"
homepage = "https://github.com/hirundula/tabularlibrs"
repository = "https://github.com/hirundula/tabularlibrs"
keywords = ["mathematics", "data-structures", "algebra", "matrix", "matrices"]
categories = ["mathematics"]
include = ["/src", "/src/lib.rs", "/src/interp.rs", "/src/memo.rs", "/src/utils.rs", "/GPL-3.0.txt"]

[dependencies]
